@@ -1,3 +1,8 @@
+2005-08-31  Werner Koch  <wk@g10code.com>
+
+	* olflange.cpp (DllRegisterServer): Define a CLSID and set the
+	ThreadingModel.
+
 2005-08-30  Werner Koch  <wk@g10code.com>
 
 	Renamed from "outlgpg" to "gpgol".
